# core

./: .gitignore  README.md
alm/: CLAUDE.md  Cargo.toml  alm.yaml
alm/.claude/skills/: alm-build.md  alm-develop.md  alm-write.md
alm/crates/alm-agent/: Cargo.toml
alm/crates/alm-agent/src/: lib.rs  meta.rs  prompt.rs  selfheal.rs
alm/crates/alm-cli/: Cargo.toml
alm/crates/alm-cli/src/: main.rs
alm/crates/alm-config/: Cargo.toml
alm/crates/alm-config/src/: lib.rs
alm/crates/alm-interp/: Cargo.toml
alm/crates/alm-interp/src/: lib.rs
alm/crates/alm-ir/: Cargo.toml
alm/crates/alm-ir/src/: lib.rs  lower.rs
alm/crates/alm-lexer/: Cargo.toml
alm/crates/alm-lexer/src/: lib.rs
alm/crates/alm-lint/: Cargo.toml
alm/crates/alm-lint/src/: lib.rs
alm/crates/alm-llvm/: Cargo.toml
alm/crates/alm-llvm/src/: lib.rs
alm/crates/alm-parser/: Cargo.toml
alm/crates/alm-parser/src/: ast.rs  lib.rs
alm/crates/alm-target/: Cargo.toml
alm/crates/alm-target/src/: lib.rs
alm/crates/alm-wasm/: Cargo.toml
alm/crates/alm-wasm/src/: compile.rs  effects.rs  lib.rs  sandbox.rs
alm/examples/: counter.alm  effects.alm  hello.alm  match.alm  native.alm  structs.alm
