[package]
name = "alm-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alm-lexer = { path = "../alm-lexer" }
alm-parser = { path = "../alm-parser" }
alm-interp = { path = "../alm-interp" }
alm-config = { path = "../alm-config" }
alm-lint = { path = "../alm-lint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
