[package]
name = "alm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alm-lexer = { path = "../alm-lexer" }
alm-parser = { path = "../alm-parser" }
alm-interp = { path = "../alm-interp" }
alm-llvm = { path = "../alm-llvm" }
alm-wasm = { path = "../alm-wasm" }
alm-target = { path = "../alm-target" }
alm-config = { path = "../alm-config" }
alm-lint = { path = "../alm-lint" }
alm-agent = { path = "../alm-agent" }
