[package]
name = "alm-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alm-lexer = { path = "../alm-lexer" }
alm-parser = { path = "../alm-parser" }
alm-ir = { path = "../alm-ir" }
alm-target = { path = "../alm-target" }
inkwell = { version = "0.5", features = ["llvm18-0"] }
